--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -62,6 +62,7 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Body", name: "body", widget: "markdown" }
       - { label: "Summary", name: "summary", widget: "text" }
+      - { label: "Cover", name: "cover", widget: "image" }
       - {
           label: "Meta Description",
           name: "metaDescription",
